Update plurals.json data to CLDR 36

--- a/js/data/locale/ceb/plurals.json
+++ b/js/data/locale/ceb/plurals.json
@@ -11,24 +11,12 @@
                     },
                     {
                         "eq": [
-                            {
-                                "mod": [
-                                    "i",
-                                    10
-                                ]
-                            },
-                            1
-                        ]
-                    },
-                    {
-                        "neq": [
-                            {
-                                "mod": [
-                                    "i",
-                                    100
-                                ]
-                            },
-                            11
+                            "i",
+                            [
+                                1,
+                                2,
+                                3
+                            ]
                         ]
                     }
                 ]
@@ -37,13 +25,33 @@
                 "and": [
                     {
                         "eq": [
+                            "v",
+                            0
+                        ]
+                    },
+                    {
+                        "neq": [
                             {
                                 "mod": [
-                                    "f",
+                                    "i",
                                     10
                                 ]
                             },
-                            1
+                            [
+                                4,
+                                6,
+                                9
+                            ]
+                        ]
+                    }
+                ]
+            },
+            {
+                "and": [
+                    {
+                        "neq": [
+                            "v",
+                            0
                         ]
                     },
                     {
@@ -51,10 +59,14 @@
                             {
                                 "mod": [
                                     "f",
-                                    100
+                                    10
                                 ]
                             },
-                            11
+                            [
+                                4,
+                                6,
+                                9
+                            ]
                         ]
                     }
                 ]
