--- a/js/data/locale/kw/plurals.json
+++ b/js/data/locale/kw/plurals.json
@@ -1,4 +1,10 @@
 {
+    "zero": {
+        "eq": [
+            "n",
+            0
+        ]
+    },
     "one": {
         "eq": [
             "n",
@@ -6,9 +12,123 @@
         ]
     },
     "two": {
+        "or": [
+            {
+                "eq": [
+                    {
+                        "mod": [
+                            "n",
+                            100
+                        ]
+                    },
+                    [
+                        2,
+                        22,
+                        42,
+                        62,
+                        82
+                    ]
+                ]
+            },
+            {
+                "and": [
+                    {
+                        "eq": [
+                            {
+                                "mod": [
+                                    "n",
+                                    1000
+                                ]
+                            },
+                            0
+                        ]
+                    },
+                    {
+                        "eq": [
+                            {
+                                "mod": [
+                                    "n",
+                                    100000
+                                ]
+                            },
+                            [
+                                [
+                                    1000,
+                                    20000
+                                ],
+                                40000,
+                                60000,
+                                80000
+                            ]
+                        ]
+                    }
+                ]
+            },
+            {
+                "and": [
+                    {
+                        "neq": [
+                            "n",
+                            0
+                        ]
+                    },
+                    {
+                        "eq": [
+                            {
+                                "mod": [
+                                    "n",
+                                    1000000
+                                ]
+                            },
+                            100000
+                        ]
+                    }
+                ]
+            }
+        ]
+    },
+    "few": {
         "eq": [
-            "n",
-            2
+            {
+                "mod": [
+                    "n",
+                    100
+                ]
+            },
+            [
+                3,
+                23,
+                43,
+                63,
+                83
+            ]
+        ]
+    },
+    "many": {
+        "and": [
+            {
+                "neq": [
+                    "n",
+                    1
+                ]
+            },
+            {
+                "eq": [
+                    {
+                        "mod": [
+                            "n",
+                            100
+                        ]
+                    },
+                    [
+                        1,
+                        21,
+                        41,
+                        61,
+                        81
+                    ]
+                ]
+            }
         ]
     }
 }
