Update ctype localedate to UCD 13.0.0

--- a/js/data/locale/ctype.json
+++ b/js/data/locale/ctype.json
@@ -290,6 +290,12 @@
             129647
         ]
     ],
+    "chorasmian": [
+        [
+            69552,
+            69599
+        ]
+    ],
     "cjk": [
         [
             12272,
@@ -316,6 +322,12 @@
         [
             183984,
             191471
+        ]
+    ],
+    "cjk unified ideographs extension g": [
+        [
+            196608,
+            201551
         ]
     ],
     "cjkcompatibility": [
@@ -458,6 +470,12 @@
             10175
         ]
     ],
+    "dives akuru": [
+        [
+            71936,
+            72031
+        ]
+    ],
     "dogra": [
         [
             71680,
@@ -476,10 +494,22 @@
             113823
         ]
     ],
+    "egyptian hieroglyph format controls": [
+        [
+            78896,
+            78911
+        ]
+    ],
     "elbasan": [
         [
             66816,
             66863
+        ]
+    ],
+    "elymaic": [
+        [
+            69600,
+            69631
         ]
     ],
     "emoticons": [
@@ -910,6 +940,12 @@
             68191
         ]
     ],
+    "khitan small script": [
+        [
+            101120,
+            101631
+        ]
+    ],
     "khmer": [
         [
             6016,
@@ -996,6 +1032,12 @@
         [
             42192,
             42239
+        ]
+    ],
+    "lisu supplement": [
+        [
+            73648,
+            73663
         ]
     ],
     "lowsurrogates": [
@@ -1196,6 +1238,12 @@
             67759
         ]
     ],
+    "nandinagari": [
+        [
+            72096,
+            72191
+        ]
+    ],
     "newa": [
         [
             70656,
@@ -1224,6 +1272,12 @@
         [
             110960,
             111359
+        ]
+    ],
+    "nyiakeng puachue hmong": [
+        [
+            123136,
+            123215
         ]
     ],
     "ocr": [
@@ -1324,6 +1378,12 @@
         [
             66688,
             66735
+        ]
+    ],
+    "ottoman siyaq numbers": [
+        [
+            126208,
+            126287
         ]
     ],
     "pahawhhmong": [
@@ -1492,6 +1552,12 @@
             65135
         ]
     ],
+    "small kana extension": [
+        [
+            110896,
+            110959
+        ]
+    ],
     "sogdian": [
         [
             69424,
@@ -1548,6 +1614,18 @@
         [
             43008,
             43055
+        ]
+    ],
+    "symbols and pictographs extended-a": [
+        [
+            129648,
+            129791
+        ]
+    ],
+    "symbols for legacy computing": [
+        [
+            129792,
+            130047
         ]
     ],
     "syriac": [
@@ -1616,10 +1694,22 @@
             3071
         ]
     ],
+    "tamil supplement": [
+        [
+            73664,
+            73727
+        ]
+    ],
     "tangut": [
         [
             94176,
             101119
+        ]
+    ],
+    "tangut supplement": [
+        [
+            101632,
+            101775
         ]
     ],
     "telugu": [
@@ -1692,6 +1782,12 @@
             65055
         ]
     ],
+    "wancho": [
+        [
+            123584,
+            123647
+        ]
+    ],
     "warangciti": [
         [
             71840,
@@ -1702,6 +1798,12 @@
         [
             65280,
             65519
+        ]
+    ],
+    "yezidi": [
+        [
+            69248,
+            69311
         ]
     ],
     "yi": [
