Update localematch.json data to CLDR 36

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -211,6 +211,7 @@
         "EZ": "de-Latn-EZ",
         "Egyp": "egy-Egyp-EG",
         "Elba": "sq-Elba-AL",
+        "Elym": "arc-Elym-IR",
         "Ethi": "am-Ethi-ET",
         "Ethi-ER": "ti-Ethi-ER",
         "Ethi-ET": "am-Ethi-ET",
@@ -280,6 +281,7 @@
         "Hira": "ja-Hira-JP",
         "Hluw": "hlu-Hluw-TR",
         "Hmng": "hnj-Hmng-LA",
+        "Hmnp": "mww-Hmnp-US",
         "Hrkt": "ja-Hrkt-JP",
         "Hrkt-JP": "ja-Hrkt-JP",
         "Hung": "hu-Hung-HU",
@@ -622,6 +624,7 @@
         "NR": "na-Latn-NR",
         "NU": "en-Latn-NU",
         "NZ": "en-Latn-NZ",
+        "Nand": "sa-Nand-IN",
         "Narb": "xna-Narb-SA",
         "Nbat": "arc-Nbat-JO",
         "Newa": "new-Newa-NP",
@@ -760,6 +763,7 @@
         "WF": "fr-Latn-WF",
         "WS": "sm-Latn-WS",
         "Wara": "hoc-Wara-IN",
+        "Wcho": "nnp-Wcho-IN",
         "XK": "sq-Latn-XK",
         "XX": "zxx-Latn-XX",
         "Xpeo": "peo-Xpeo-IR",
@@ -820,6 +824,9 @@
         "adj": "adj-Latn-ZZ",
         "adj-Latn": "adj-Latn-ZZ",
         "adj-ZZ": "adj-Latn-ZZ",
+        "adp": "adp-Tibt-BT",
+        "adp-BT": "adp-Tibt-BT",
+        "adp-Tibt": "adp-Tibt-BT",
         "ady": "ady-Cyrl-RU",
         "ady-Cyrl": "ady-Cyrl-RU",
         "ady-RU": "ady-Cyrl-RU",
@@ -902,6 +909,9 @@
         "amp": "amp-Latn-ZZ",
         "amp-Latn": "amp-Latn-ZZ",
         "amp-ZZ": "amp-Latn-ZZ",
+        "an": "an-Latn-ES",
+        "an-ES": "an-Latn-ES",
+        "an-Latn": "an-Latn-ES",
         "anc": "anc-Latn-ZZ",
         "anc-Latn": "anc-Latn-ZZ",
         "anc-ZZ": "anc-Latn-ZZ",
@@ -984,6 +994,9 @@
         "arq": "arq-Arab-DZ",
         "arq-Arab": "arq-Arab-DZ",
         "arq-DZ": "arq-Arab-DZ",
+        "ars": "ars-Arab-SA",
+        "ars-Arab": "ars-Arab-SA",
+        "ars-SA": "ars-Arab-SA",
         "ary": "ary-Arab-MA",
         "ary-Arab": "ary-Arab-MA",
         "ary-MA": "ary-Arab-MA",
@@ -1195,9 +1208,6 @@
         "bhi": "bhi-Deva-IN",
         "bhi-Deva": "bhi-Deva-IN",
         "bhi-IN": "bhi-Deva-IN",
-        "bhk": "bhk-Latn-PH",
-        "bhk-Latn": "bhk-Latn-PH",
-        "bhk-PH": "bhk-Latn-PH",
         "bhl": "bhl-Latn-ZZ",
         "bhl-Latn": "bhl-Latn-ZZ",
         "bhl-ZZ": "bhl-Latn-ZZ",
@@ -1484,6 +1494,9 @@
         "chr": "chr-Cher-US",
         "chr-Cher": "chr-Cher-US",
         "chr-US": "chr-Cher-US",
+        "cic": "cic-Latn-US",
+        "cic-Latn": "cic-Latn-US",
+        "cic-US": "cic-Latn-US",
         "cja": "cja-Arab-KH",
         "cja-Arab": "cja-Arab-KH",
         "cja-KH": "cja-Arab-KH",
@@ -1662,6 +1675,9 @@
         "dow": "dow-Latn-ZZ",
         "dow-Latn": "dow-Latn-ZZ",
         "dow-ZZ": "dow-Latn-ZZ",
+        "drh": "drh-Mong-CN",
+        "drh-CN": "drh-Mong-CN",
+        "drh-Mong": "drh-Mong-CN",
         "dri": "dri-Latn-ZZ",
         "dri-Latn": "dri-Latn-ZZ",
         "dri-ZZ": "dri-Latn-ZZ",
@@ -2872,6 +2888,9 @@
         "kto": "kto-Latn-ZZ",
         "kto-Latn": "kto-Latn-ZZ",
         "kto-ZZ": "kto-Latn-ZZ",
+        "ktr": "ktr-Latn-MY",
+        "ktr-Latn": "ktr-Latn-MY",
+        "ktr-MY": "ktr-Latn-MY",
         "ku": "ku-Latn-TR",
         "ku-Arab": "ku-Arab-IQ",
         "ku-LB": "ku-Arab-LB",
@@ -2922,12 +2941,18 @@
         "kwo": "kwo-Latn-ZZ",
         "kwo-Latn": "kwo-Latn-ZZ",
         "kwo-ZZ": "kwo-Latn-ZZ",
+        "kwq": "kwq-Latn-ZZ",
+        "kwq-Latn": "kwq-Latn-ZZ",
+        "kwq-ZZ": "kwq-Latn-ZZ",
         "kxa": "kxa-Latn-ZZ",
         "kxa-Latn": "kxa-Latn-ZZ",
         "kxa-ZZ": "kxa-Latn-ZZ",
         "kxc": "kxc-Ethi-ZZ",
         "kxc-Ethi": "kxc-Ethi-ZZ",
         "kxc-ZZ": "kxc-Ethi-ZZ",
+        "kxe": "kxe-Latn-ZZ",
+        "kxe-Latn": "kxe-Latn-ZZ",
+        "kxe-ZZ": "kxe-Latn-ZZ",
         "kxm": "kxm-Thai-TH",
         "kxm-TH": "kxm-Thai-TH",
         "kxm-Thai": "kxm-Thai-TH",
@@ -2953,9 +2978,15 @@
         "kyx": "kyx-Latn-ZZ",
         "kyx-Latn": "kyx-Latn-ZZ",
         "kyx-ZZ": "kyx-Latn-ZZ",
+        "kzj": "kzj-Latn-MY",
+        "kzj-Latn": "kzj-Latn-MY",
+        "kzj-MY": "kzj-Latn-MY",
         "kzr": "kzr-Latn-ZZ",
         "kzr-Latn": "kzr-Latn-ZZ",
         "kzr-ZZ": "kzr-Latn-ZZ",
+        "kzt": "kzt-Latn-MY",
+        "kzt-Latn": "kzt-Latn-MY",
+        "kzt-MY": "kzt-Latn-MY",
         "la": "la-Latn-VA",
         "la-Latn": "la-Latn-VA",
         "la-VA": "la-Latn-VA",
@@ -3352,6 +3383,9 @@
         "mnw": "mnw-Mymr-MM",
         "mnw-MM": "mnw-Mymr-MM",
         "mnw-Mymr": "mnw-Mymr-MM",
+        "mo": "mo-Latn-RO",
+        "mo-Latn": "mo-Latn-RO",
+        "mo-RO": "mo-Latn-RO",
         "moa": "moa-Latn-ZZ",
         "moa-Latn": "moa-Latn-ZZ",
         "moa-ZZ": "moa-Latn-ZZ",
@@ -3443,6 +3477,9 @@
         "mwv": "mwv-Latn-ID",
         "mwv-ID": "mwv-Latn-ID",
         "mwv-Latn": "mwv-Latn-ID",
+        "mww": "mww-Hmnp-US",
+        "mww-Hmnp": "mww-Hmnp-US",
+        "mww-US": "mww-Hmnp-US",
         "mxc": "mxc-Latn-ZW",
         "mxc-Latn": "mxc-Latn-ZW",
         "mxc-ZW": "mxc-Latn-ZW",
@@ -3639,6 +3676,9 @@
         "nnm": "nnm-Latn-ZZ",
         "nnm-Latn": "nnm-Latn-ZZ",
         "nnm-ZZ": "nnm-Latn-ZZ",
+        "nnp": "nnp-Wcho-IN",
+        "nnp-IN": "nnp-Wcho-IN",
+        "nnp-Wcho": "nnp-Wcho-IN",
         "no": "no-Latn-NO",
         "no-BV": "no-Latn-BV",
         "no-Latn": "no-Latn-NO",
@@ -3865,6 +3905,9 @@
         "pon": "pon-Latn-FM",
         "pon-FM": "pon-Latn-FM",
         "pon-Latn": "pon-Latn-FM",
+        "ppa": "ppa-Deva-IN",
+        "ppa-Deva": "ppa-Deva-IN",
+        "ppa-IN": "ppa-Deva-IN",
         "ppo": "ppo-Latn-ZZ",
         "ppo-Latn": "ppo-Latn-ZZ",
         "ppo-ZZ": "ppo-Latn-ZZ",
@@ -4399,6 +4442,9 @@
         "tdh": "tdh-Deva-NP",
         "tdh-Deva": "tdh-Deva-NP",
         "tdh-NP": "tdh-Deva-NP",
+        "tdu": "tdu-Latn-MY",
+        "tdu-Latn": "tdu-Latn-MY",
+        "tdu-MY": "tdu-Latn-MY",
         "te": "te-Telu-IN",
         "te-IN": "te-Telu-IN",
         "te-Telu": "te-Telu-IN",
@@ -4813,6 +4859,7 @@
         "und-EZ": "de-Latn-EZ",
         "und-Egyp": "egy-Egyp-EG",
         "und-Elba": "sq-Elba-AL",
+        "und-Elym": "arc-Elym-IR",
         "und-Ethi": "am-Ethi-ET",
         "und-FI": "fi-Latn-FI",
         "und-FJ": "en-Latn-FJ",
@@ -4871,6 +4918,7 @@
         "und-Hira": "ja-Hira-JP",
         "und-Hluw": "hlu-Hluw-TR",
         "und-Hmng": "hnj-Hmng-LA",
+        "und-Hmnp": "mww-Hmnp-US",
         "und-Hung": "hu-Hung-HU",
         "und-IC": "es-Latn-IC",
         "und-ID": "id-Latn-ID",
@@ -5003,6 +5051,7 @@
         "und-NR": "na-Latn-NR",
         "und-NU": "en-Latn-NU",
         "und-NZ": "en-Latn-NZ",
+        "und-Nand": "sa-Nand-IN",
         "und-Narb": "xna-Narb-SA",
         "und-Nbat": "arc-Nbat-JO",
         "und-Newa": "new-Newa-NP",
@@ -5136,6 +5185,7 @@
         "und-WF": "fr-Latn-WF",
         "und-WS": "sm-Latn-WS",
         "und-Wara": "hoc-Wara-IN",
+        "und-Wcho": "nnp-Wcho-IN",
         "und-XK": "sq-Latn-XK",
         "und-XX": "zxx-Latn-XX",
         "und-Xpeo": "peo-Xpeo-IR",
@@ -5155,6 +5205,9 @@
         "unx": "unx-Beng-IN",
         "unx-Beng": "unx-Beng-IN",
         "unx-IN": "unx-Beng-IN",
+        "uok": "uok-Latn-ZZ",
+        "uok-Latn": "uok-Latn-ZZ",
+        "uok-ZZ": "uok-Latn-ZZ",
         "ur": "ur-Arab-PK",
         "ur-Arab": "ur-Arab-PK",
         "ur-IN": "ur-Arab-IN",
