Updated list.json files to cldr 36

--- a/js/data/locale/gd/list.json
+++ b/js/data/locale/gd/list.json
@@ -1,16 +1,16 @@
 {
     "standard": {
         "short": {
-            "2": "{0} is {1}",
+            "2": "{0}, {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
-            "end": "{0} is {1}"
+            "end": "{0}, {1}"
         },
         "medium": {
-            "2": "{0} is {1}",
+            "2": "{0} ⁊ {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
-            "end": "{0} is {1}"
+            "end": "{0} ⁊ {1}"
         },
         "long": {
             "2": "{0} agus {1}",
