--- a/js/data/locale/he/list.json
+++ b/js/data/locale/he/list.json
@@ -4,8 +4,30 @@
         "end": "{0} ו{1}"
     },
     "or": {
-        "2": "{0} או {1}",
-        "end": "{0}, או {1}"
+        "short": {
+            "2": "{0} או {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} או {1}"
+        },
+        "medium": {
+            "2": "{0} או {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} או {1}"
+        },
+        "long": {
+            "2": "{0} או {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, או {1}"
+        },
+        "full": {
+            "2": "{0} או {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, או {1}"
+        }
     },
     "unit": {
         "short": {
