--- a/js/data/locale/mn/list.json
+++ b/js/data/locale/mn/list.json
@@ -1,6 +1,12 @@
 {
     "or": {
         "2": "{0} эсвэл {1}",
-        "end": "{0}, эсвэл {1}"
+        "end": "{0}, {1} зэргийн аль нэг"
+    },
+    "unit": {
+        "2": "{0} {1}",
+        "start": "{0} {1}",
+        "middle": "{0} {1}",
+        "end": "{0} {1}"
     }
 }
