--- a/js/data/locale/pt/list.json
+++ b/js/data/locale/pt/list.json
@@ -1,7 +1,29 @@
 {
     "standard": {
-        "2": "{0} e {1}",
-        "end": "{0} e {1}"
+        "short": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        },
+        "medium": {
+            "2": "{0} e {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} e {1}"
+        },
+        "long": {
+            "2": "{0} e {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} e {1}"
+        },
+        "full": {
+            "2": "{0} e {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} e {1}"
+        }
     },
     "or": {
         "2": "{0} ou {1}",
@@ -9,6 +31,30 @@
     },
     "unit": {
         "2": "{0} e {1}",
-        "end": "{0} e {1}"
+        "end": "{0} e {1}",
+        "short": {
+            "2": "{0} {1}",
+            "start": "{0} {1}",
+            "middle": "{0} {1}",
+            "end": "{0} {1}"
+        },
+        "medium": {
+            "2": "{0} e {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} e {1}"
+        },
+        "long": {
+            "2": "{0} e {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} e {1}"
+        },
+        "full": {
+            "2": "{0} e {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} e {1}"
+        }
     }
 }
