--- a/js/data/locale/tk/list.json
+++ b/js/data/locale/tk/list.json
@@ -1,7 +1,29 @@
 {
     "standard": {
-        "2": "{0} we {1}",
-        "end": "{0} we {1}"
+        "short": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        },
+        "medium": {
+            "2": "{0} we {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} we {1}"
+        },
+        "long": {
+            "2": "{0} we {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} we {1}"
+        },
+        "full": {
+            "2": "{0} we {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} we {1}"
+        }
     },
     "or": {
         "2": "{0} ýa-da {1}",
@@ -21,13 +43,13 @@
             "end": "{0}, {1}"
         },
         "long": {
-            "2": "{0} we {1}",
+            "2": "{0}, {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
             "end": "{0}, {1}"
         },
         "full": {
-            "2": "{0} we {1}",
+            "2": "{0}, {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
             "end": "{0}, {1}"
