--- a/js/data/locale/ar/list.json
+++ b/js/data/locale/ar/list.json
@@ -1,42 +1,22 @@
 {
     "standard": {
-        "short": {
-            "2": "{0} و{1}",
-            "start": "{0}، و{1}",
-            "middle": "{0}، و{1}",
-            "end": "{0}، و{1}"
-        },
-        "medium": {
-            "2": "{0} و{1}",
-            "start": "{0}، و{1}",
-            "middle": "{0}، و{1}",
-            "end": "{0}، و{1}"
-        },
-        "long": {
-            "2": "{0} و{1}",
-            "start": "{0}، {1}",
-            "middle": "{0}، {1}",
-            "end": "{0}، و{1}"
-        },
-        "full": {
-            "2": "{0} و{1}",
-            "start": "{0}، {1}",
-            "middle": "{0}، {1}",
-            "end": "{0}، و{1}"
-        }
+        "2": "{0} و{1}",
+        "start": "{0} و{1}",
+        "middle": "{0} و{1}",
+        "end": "{0} و{1}"
     },
     "or": {
         "2": "{0} أو {1}",
-        "start": "{0} و{1}",
-        "middle": "{0} و{1}",
+        "start": "{0} أو {1}",
+        "middle": "{0} أو {1}",
         "end": "{0} أو {1}"
     },
     "unit": {
         "short": {
-            "2": "{0}، {1}",
-            "start": "{0}، {1}",
-            "middle": "{0}، {1}",
-            "end": "{0}، {1}"
+            "2": "{0} و{1}",
+            "start": "{0} و{1}",
+            "middle": "{0} و{1}",
+            "end": "{0} و{1}"
         },
         "medium": {
             "2": "{0} و{1}",
