--- a/js/data/locale/br/list.json
+++ b/js/data/locale/br/list.json
@@ -1,6 +1,32 @@
 {
+    "standard": {
+        "short": {
+            "2": "{0} & {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} & {1}"
+        },
+        "medium": {
+            "2": "{0} & {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} & {1}"
+        },
+        "long": {
+            "2": "{0} ha {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} ha {1}"
+        },
+        "full": {
+            "2": "{0} ha {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} ha {1}"
+        }
+    },
     "or": {
         "2": "{0} pe {1}",
-        "end": "{0}, pe {1}"
+        "end": "{0} pe {1}"
     }
 }
