--- a/js/data/locale/da/list.json
+++ b/js/data/locale/da/list.json
@@ -4,8 +4,30 @@
         "end": "{0} og {1}"
     },
     "or": {
-        "2": "{0} eller {1}",
-        "end": "{0} eller {1}"
+        "short": {
+            "2": "{0} el. {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} el. {1}"
+        },
+        "medium": {
+            "2": "{0} el. {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} el. {1}"
+        },
+        "long": {
+            "2": "{0} eller {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} eller {1}"
+        },
+        "full": {
+            "2": "{0} eller {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} eller {1}"
+        }
     },
     "unit": {
         "2": "{0} og {1}",
