--- a/js/data/locale/el/list.json
+++ b/js/data/locale/el/list.json
@@ -1,7 +1,29 @@
 {
     "standard": {
-        "2": "{0} και {1}",
-        "end": "{0} και {1}"
+        "short": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        },
+        "medium": {
+            "2": "{0} και {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} και {1}"
+        },
+        "long": {
+            "2": "{0} και {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} και {1}"
+        },
+        "full": {
+            "2": "{0} και {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} και {1}"
+        }
     },
     "or": {
         "2": "{0} ή {1}",
