--- a/js/data/locale/en/list.json
+++ b/js/data/locale/en/list.json
@@ -1,7 +1,32 @@
 {
     "standard": {
-        "2": "{0} and {1}",
-        "end": "{0}, and {1}"
+        "short": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        },
+        "medium": {
+            "2": "{0} and {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} and {1}"
+        },
+        "long": {
+            "2": "{0} and {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} and {1}"
+        },
+        "full": {
+            "2": "{0} and {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} and {1}"
+        }
+    },
+    "or": {
+        "end": "{0} or {1}"
     },
     "unit": {
         "short": {
