--- a/js/data/locale/gu/list.json
+++ b/js/data/locale/gu/list.json
@@ -1,11 +1,55 @@
 {
     "standard": {
-        "2": "{0} અને {1}",
-        "end": "{0} અને {1}"
+        "short": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        },
+        "medium": {
+            "2": "{0} અને {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} અને {1}"
+        },
+        "long": {
+            "2": "{0} અને {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} અને {1}"
+        },
+        "full": {
+            "2": "{0} અને {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} અને {1}"
+        }
     },
     "or": {
-        "2": "{0} અથવા {1}",
-        "end": "{0}, અથવા {1}"
+        "short": {
+            "2": "{0} અથવા {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} અથવા {1}"
+        },
+        "medium": {
+            "2": "{0} અથવા {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} અથવા {1}"
+        },
+        "long": {
+            "2": "{0} અથવા {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, અથવા {1}"
+        },
+        "full": {
+            "2": "{0} અથવા {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, અથવા {1}"
+        }
     },
     "unit": {
         "short": {
