--- a/js/data/locale/hi/list.json
+++ b/js/data/locale/hi/list.json
@@ -31,10 +31,10 @@
     },
     "unit": {
         "short": {
-            "2": "{0}, {1}",
+            "2": "{0} {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
-            "end": "{0}, {1}"
+            "end": "{0} {1}"
         },
         "medium": {
             "2": "{0}, {1}",
