--- a/js/data/locale/hr/list.json
+++ b/js/data/locale/hr/list.json
@@ -15,10 +15,10 @@
             "end": "{0} {1}"
         },
         "medium": {
-            "2": "{0}, {1}",
+            "2": "{0} i {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
-            "end": "{0}, {1}"
+            "end": "{0} i {1}"
         },
         "long": {
             "2": "{0} i {1}",
