--- a/js/data/locale/pa/list.json
+++ b/js/data/locale/pa/list.json
@@ -1,9 +1,80 @@
 {
     "standard": {
-        "2": "{0} ਅਤੇ {1}",
-        "end": "{0} ਅਤੇ {1}"
+        "short": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        },
+        "medium": {
+            "2": "{0} ਅਤੇ {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} ਅਤੇ {1}"
+        },
+        "long": {
+            "2": "{0} ਅਤੇ {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} ਅਤੇ {1}"
+        },
+        "full": {
+            "2": "{0} ਅਤੇ {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} ਅਤੇ {1}"
+        }
     },
     "or": {
-        "2": "{0} ਜਾਂ {1}"
+        "short": {
+            "2": "{0} ਜਾਂ {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, ਜਾਂ {1}"
+        },
+        "medium": {
+            "2": "{0} ਜਾਂ {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, ਜਾਂ {1}"
+        },
+        "long": {
+            "2": "{0} ਜਾਂ {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, or {1}"
+        },
+        "full": {
+            "2": "{0} ਜਾਂ {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, or {1}"
+        }
+    },
+    "unit": {
+        "short": {
+            "2": "{0} {1}",
+            "start": "{0} {1}",
+            "middle": "{0} {1}",
+            "end": "{0} {1}"
+        },
+        "medium": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        },
+        "long": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        },
+        "full": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        }
     }
 }
