--- a/js/data/locale/ps/list.json
+++ b/js/data/locale/ps/list.json
@@ -1,16 +1,16 @@
 {
     "standard": {
         "short": {
-            "2": "{0} او {1}",
-            "start": "{0}, {1}",
-            "middle": "{0}, {1}",
-            "end": "{0}, {1}"
+            "2": "{0}، {1}",
+            "start": "{0}، {1}",
+            "middle": "{0}، {1}",
+            "end": "{0}، او {1}"
         },
         "medium": {
             "2": "{0} او {1}",
-            "start": "{0}, {1}",
-            "middle": "{0}, {1}",
-            "end": "{0}, {1}"
+            "start": "{0}، {1}",
+            "middle": "{0}، {1}",
+            "end": "{0}، او {1}"
         },
         "long": {
             "2": "{0} او {1}",
