--- a/js/data/locale/ur/list.json
+++ b/js/data/locale/ur/list.json
@@ -1,9 +1,29 @@
 {
     "standard": {
-        "2": "{0} اور {1}",
-        "start": "{0}، {1}",
-        "middle": "{0}، {1}",
-        "end": "{0}، اور {1}"
+        "short": {
+            "2": "{0}، {1}",
+            "start": "{0}، {1}",
+            "middle": "{0}، {1}",
+            "end": "{0}، {1}"
+        },
+        "medium": {
+            "2": "{0} اور {1}",
+            "start": "{0}، {1}",
+            "middle": "{0}، {1}",
+            "end": "{0}، اور {1}"
+        },
+        "long": {
+            "2": "{0} اور {1}",
+            "start": "{0}، {1}",
+            "middle": "{0}، {1}",
+            "end": "{0}، اور {1}"
+        },
+        "full": {
+            "2": "{0} اور {1}",
+            "start": "{0}، {1}",
+            "middle": "{0}، {1}",
+            "end": "{0}، اور {1}"
+        }
     },
     "or": {
         "2": "{0} یا {1}",
@@ -25,13 +45,13 @@
             "end": "{0}، اور {1}"
         },
         "long": {
-            "2": "{0} اور {1}",
+            "2": "{0}، {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
             "end": "{0}، اور {1}"
         },
         "full": {
-            "2": "{0} اور {1}",
+            "2": "{0}، {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
             "end": "{0}، اور {1}"
