--- a/js/data/locale/vi/list.json
+++ b/js/data/locale/vi/list.json
@@ -1,7 +1,29 @@
 {
     "standard": {
-        "2": "{0} và {1}",
-        "end": "{0} và {1}"
+        "short": {
+            "2": "{0}, {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0}, {1}"
+        },
+        "medium": {
+            "2": "{0} và {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} và {1}"
+        },
+        "long": {
+            "2": "{0} và {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} và {1}"
+        },
+        "full": {
+            "2": "{0} và {1}",
+            "start": "{0}, {1}",
+            "middle": "{0}, {1}",
+            "end": "{0} và {1}"
+        }
     },
     "or": {
         "2": "{0} hoặc {1}",
@@ -15,22 +37,22 @@
             "end": "{0} {1}"
         },
         "medium": {
-            "2": "{0}, {1}",
+            "2": "{0} và {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
-            "end": "{0}, {1}"
+            "end": "{0} và {1}"
         },
         "long": {
-            "2": "{0}, {1}",
+            "2": "{0} và {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
-            "end": "{0}, {1}"
+            "end": "{0} và {1}"
         },
         "full": {
-            "2": "{0}, {1}",
+            "2": "{0} và {1}",
             "start": "{0}, {1}",
             "middle": "{0}, {1}",
-            "end": "{0}, {1}"
+            "end": "{0} và {1}"
         }
     }
 }
