--- a/js/data/locale/zoneinfo/America/North_Dakota/Beulah.json
+++ b/js/data/locale/zoneinfo/America/North_Dakota/Beulah.json
@@ -5,13 +5,15 @@
         "r": "0>1",
         "t": "2:0"
     },
-    "f": "E{c}T",
-    "o": "-5:0",
+    "f": "C{c}T",
+    "o": "-6:0",
     "s": {
         "c": "D",
         "m": 3,
         "r": "0>8",
         "t": "2:0",
         "v": "1:0"
-    }
+    },
+    "c": "US",
+    "n": "Central {c} Time"
 }
