--- a/js/data/locale/zoneinfo/zonetab.json
+++ b/js/data/locale/zoneinfo/zonetab.json
@@ -24,11 +24,11 @@
         "Africa/Luanda"
     ],
     "AQ": [
-        "Antarctica/McMurdo",
         "Antarctica/Casey",
         "Antarctica/Davis",
         "Antarctica/DumontDUrville",
         "Antarctica/Mawson",
+        "Antarctica/McMurdo",
         "Antarctica/Palmer",
         "Antarctica/Rothera",
         "Antarctica/Syowa",
@@ -37,18 +37,18 @@
     ],
     "AR": [
         "America/Argentina/Buenos_Aires",
-        "America/Argentina/Cordoba",
-        "America/Argentina/Salta",
-        "America/Argentina/Jujuy",
-        "America/Argentina/Tucuman",
         "America/Argentina/Catamarca",
-        "America/Argentina/La_Rioja",
-        "America/Argentina/San_Juan",
-        "America/Argentina/Mendoza",
-        "America/Argentina/San_Luis",
-        "America/Argentina/Rio_Gallegos",
-        "America/Argentina/Ushuaia",
         "America/Argentina/ComodRivadavia",
+        "America/Argentina/Cordoba",
+        "America/Argentina/Jujuy",
+        "America/Argentina/La_Rioja",
+        "America/Argentina/Mendoza",
+        "America/Argentina/Rio_Gallegos",
+        "America/Argentina/Salta",
+        "America/Argentina/San_Juan",
+        "America/Argentina/San_Luis",
+        "America/Argentina/Tucuman",
+        "America/Argentina/Ushuaia",
         "America/Buenos_Aires",
         "America/Catamarca",
         "America/Cordoba",
@@ -65,26 +65,26 @@
         "Europe/Vienna"
     ],
     "AU": [
-        "Australia/Lord_Howe",
         "Antarctica/Macquarie",
-        "Australia/Hobart",
-        "Australia/Currie",
-        "Australia/Melbourne",
-        "Australia/Sydney",
-        "Australia/Broken_Hill",
-        "Australia/Brisbane",
-        "Australia/Lindeman",
-        "Australia/Adelaide",
-        "Australia/Darwin",
-        "Australia/Perth",
-        "Australia/Eucla",
         "Australia/ACT",
+        "Australia/Adelaide",
+        "Australia/Brisbane",
+        "Australia/Broken_Hill",
         "Australia/Canberra",
+        "Australia/Currie",
+        "Australia/Darwin",
+        "Australia/Eucla",
+        "Australia/Hobart",
         "Australia/LHI",
+        "Australia/Lindeman",
+        "Australia/Lord_Howe",
+        "Australia/Melbourne",
         "Australia/NSW",
         "Australia/North",
+        "Australia/Perth",
         "Australia/Queensland",
         "Australia/South",
+        "Australia/Sydney",
         "Australia/Tasmania",
         "Australia/Victoria",
         "Australia/West",
@@ -106,8 +106,8 @@
         "America/Barbados"
     ],
     "BD": [
-        "Asia/Dhaka",
-        "Asia/Dacca"
+        "Asia/Dacca",
+        "Asia/Dhaka"
     ],
     "BE": [
         "Europe/Brussels"
@@ -143,23 +143,23 @@
         "America/Kralendijk"
     ],
     "BR": [
-        "America/Noronha",
-        "America/Belem",
-        "America/Fortaleza",
-        "America/Recife",
         "America/Araguaina",
-        "America/Maceio",
         "America/Bahia",
-        "America/Sao_Paulo",
+        "America/Belem",
+        "America/Boa_Vista",
         "America/Campo_Grande",
         "America/Cuiaba",
-        "America/Santarem",
-        "America/Porto_Velho",
-        "America/Boa_Vista",
-        "America/Manaus",
         "America/Eirunepe",
-        "America/Rio_Branco",
+        "America/Fortaleza",
+        "America/Maceio",
+        "America/Manaus",
+        "America/Noronha",
         "America/Porto_Acre",
+        "America/Porto_Velho",
+        "America/Recife",
+        "America/Rio_Branco",
+        "America/Santarem",
+        "America/Sao_Paulo",
         "Brazil/Acre",
         "Brazil/DeNoronha",
         "Brazil/East",
@@ -169,8 +169,8 @@
         "America/Nassau"
     ],
     "BT": [
-        "Asia/Thimphu",
-        "Asia/Thimbu"
+        "Asia/Thimbu",
+        "Asia/Thimphu"
     ],
     "BW": [
         "Africa/Gaborone"
@@ -182,36 +182,36 @@
         "America/Belize"
     ],
     "CA": [
-        "America/St_Johns",
-        "America/Halifax",
-        "America/Glace_Bay",
-        "America/Moncton",
-        "America/Goose_Bay",
-        "America/Blanc-Sablon",
-        "America/Toronto",
-        "America/Nipigon",
-        "America/Thunder_Bay",
-        "America/Iqaluit",
-        "America/Pangnirtung",
         "America/Atikokan",
-        "America/Winnipeg",
+        "America/Blanc-Sablon",
+        "America/Cambridge_Bay",
+        "America/Coral_Harbour",
+        "America/Creston",
+        "America/Dawson",
+        "America/Dawson_Creek",
+        "America/Edmonton",
+        "America/Fort_Nelson",
+        "America/Glace_Bay",
+        "America/Goose_Bay",
+        "America/Halifax",
+        "America/Inuvik",
+        "America/Iqaluit",
+        "America/Moncton",
+        "America/Montreal",
+        "America/Nipigon",
+        "America/Pangnirtung",
         "America/Rainy_River",
-        "America/Resolute",
         "America/Rankin_Inlet",
         "America/Regina",
+        "America/Resolute",
+        "America/St_Johns",
         "America/Swift_Current",
-        "America/Edmonton",
-        "America/Cambridge_Bay",
-        "America/Yellowknife",
-        "America/Inuvik",
-        "America/Creston",
-        "America/Dawson_Creek",
-        "America/Fort_Nelson",
+        "America/Thunder_Bay",
+        "America/Toronto",
         "America/Vancouver",
         "America/Whitehorse",
-        "America/Dawson",
-        "America/Coral_Harbour",
-        "America/Montreal",
+        "America/Winnipeg",
+        "America/Yellowknife",
         "Canada/Atlantic",
         "Canada/Central",
         "Canada/Eastern",
@@ -245,22 +245,22 @@
         "Pacific/Rarotonga"
     ],
     "CL": [
-        "America/Santiago",
         "America/Punta_Arenas",
-        "Pacific/Easter",
+        "America/Santiago",
         "Chile/Continental",
-        "Chile/EasterIsland"
+        "Chile/EasterIsland",
+        "Pacific/Easter"
     ],
     "CM": [
         "Africa/Douala"
     ],
     "CN": [
-        "Asia/Shanghai",
-        "Asia/Urumqi",
         "Asia/Chongqing",
         "Asia/Chungking",
         "Asia/Harbin",
         "Asia/Kashgar",
+        "Asia/Shanghai",
+        "Asia/Urumqi",
         "PRC"
     ],
     "CO": [
@@ -283,8 +283,8 @@
         "Indian/Christmas"
     ],
     "CY": [
-        "Asia/Nicosia",
-        "Asia/Famagusta"
+        "Asia/Famagusta",
+        "Asia/Nicosia"
     ],
     "CZ": [
         "Europe/Prague"
@@ -326,9 +326,9 @@
         "Africa/Asmara"
     ],
     "ES": [
-        "Europe/Madrid",
         "Africa/Ceuta",
-        "Atlantic/Canary"
+        "Atlantic/Canary",
+        "Europe/Madrid"
     ],
     "ET": [
         "Africa/Addis_Ababa"
@@ -344,15 +344,15 @@
     ],
     "FM": [
         "Pacific/Chuuk",
-        "Pacific/Pohnpei",
         "Pacific/Kosrae",
+        "Pacific/Pohnpei",
         "Pacific/Ponape",
         "Pacific/Truk",
         "Pacific/Yap"
     ],
     "FO": [
-        "Atlantic/Faroe",
-        "Atlantic/Faeroe"
+        "Atlantic/Faeroe",
+        "Atlantic/Faroe"
     ],
     "FR": [
         "Europe/Paris"
@@ -361,8 +361,8 @@
         "Africa/Libreville"
     ],
     "GB": [
-        "Europe/London",
         "Europe/Belfast",
+        "Europe/London",
         "GB",
         "GB-Eire"
     ],
@@ -385,8 +385,8 @@
         "Europe/Gibraltar"
     ],
     "GL": [
-        "America/Godthab",
         "America/Danmarkshavn",
+        "America/Godthab",
         "America/Scoresbysund",
         "America/Thule"
     ],
@@ -438,14 +438,14 @@
     ],
     "ID": [
         "Asia/Jakarta",
-        "Asia/Pontianak",
-        "Asia/Makassar",
         "Asia/Jayapura",
+        "Asia/Makassar",
+        "Asia/Pontianak",
         "Asia/Ujung_Pandang"
     ],
     "IE": [
-        "Europe/Dublin",
-        "Eire"
+        "Eire",
+        "Europe/Dublin"
     ],
     "IL": [
         "Asia/Jerusalem",
@@ -456,8 +456,8 @@
         "Europe/Isle_of_Man"
     ],
     "IN": [
-        "Asia/Kolkata",
-        "Asia/Calcutta"
+        "Asia/Calcutta",
+        "Asia/Kolkata"
     ],
     "IO": [
         "Indian/Chagos"
@@ -491,8 +491,8 @@
         "Japan"
     ],
     "KE": [
-        "Africa/Nairobi",
-        "Africa/Asmera"
+        "Africa/Asmera",
+        "Africa/Nairobi"
     ],
     "KG": [
         "Asia/Bishkek"
@@ -501,9 +501,9 @@
         "Asia/Phnom_Penh"
     ],
     "KI": [
-        "Pacific/Tarawa",
         "Pacific/Enderbury",
-        "Pacific/Kiritimati"
+        "Pacific/Kiritimati",
+        "Pacific/Tarawa"
     ],
     "KM": [
         "Indian/Comoro"
@@ -526,12 +526,12 @@
     ],
     "KZ": [
         "Asia/Almaty",
-        "Asia/Qyzylorda",
-        "Asia/Qostanay",
-        "Asia/Aqtobe",
         "Asia/Aqtau",
+        "Asia/Aqtobe",
         "Asia/Atyrau",
-        "Asia/Oral"
+        "Asia/Oral",
+        "Asia/Qostanay",
+        "Asia/Qyzylorda"
     ],
     "LA": [
         "Asia/Vientiane"
@@ -587,9 +587,9 @@
         "Indian/Antananarivo"
     ],
     "MH": [
-        "Pacific/Majuro",
+        "Kwajalein",
         "Pacific/Kwajalein",
-        "Kwajalein"
+        "Pacific/Majuro"
     ],
     "MK": [
         "Europe/Skopje"
@@ -598,18 +598,18 @@
         "Africa/Bamako"
     ],
     "MM": [
-        "Asia/Yangon",
-        "Asia/Rangoon"
+        "Asia/Rangoon",
+        "Asia/Yangon"
     ],
     "MN": [
-        "Asia/Ulaanbaatar",
-        "Asia/Hovd",
         "Asia/Choibalsan",
+        "Asia/Hovd",
+        "Asia/Ulaanbaatar",
         "Asia/Ulan_Bator"
     ],
     "MO": [
-        "Asia/Macau",
-        "Asia/Macao"
+        "Asia/Macao",
+        "Asia/Macau"
     ],
     "MP": [
         "Pacific/Saipan"
@@ -636,19 +636,19 @@
         "Africa/Blantyre"
     ],
     "MX": [
-        "America/Mexico_City",
+        "America/Bahia_Banderas",
         "America/Cancun",
-        "America/Merida",
-        "America/Monterrey",
+        "America/Chihuahua",
+        "America/Ensenada",
+        "America/Hermosillo",
         "America/Matamoros",
         "America/Mazatlan",
-        "America/Chihuahua",
+        "America/Merida",
+        "America/Mexico_City",
+        "America/Monterrey",
         "America/Ojinaga",
-        "America/Hermosillo",
-        "America/Tijuana",
-        "America/Bahia_Banderas",
-        "America/Ensenada",
         "America/Santa_Isabel",
+        "America/Tijuana",
         "Mexico/BajaNorte",
         "Mexico/BajaSur",
         "Mexico/General"
@@ -682,8 +682,8 @@
         "Europe/Amsterdam"
     ],
     "NO": [
-        "Europe/Oslo",
-        "Atlantic/Jan_Mayen"
+        "Atlantic/Jan_Mayen",
+        "Europe/Oslo"
     ],
     "NP": [
         "Asia/Kathmandu",
@@ -696,11 +696,11 @@
         "Pacific/Niue"
     ],
     "NZ": [
-        "Pacific/Auckland",
-        "Pacific/Chatham",
         "Antarctica/South_Pole",
         "NZ",
-        "NZ-CHAT"
+        "NZ-CHAT",
+        "Pacific/Auckland",
+        "Pacific/Chatham"
     ],
     "OM": [
         "Asia/Muscat"
@@ -712,13 +712,13 @@
         "America/Lima"
     ],
     "PF": [
-        "Pacific/Tahiti",
+        "Pacific/Gambier",
         "Pacific/Marquesas",
-        "Pacific/Gambier"
+        "Pacific/Tahiti"
     ],
     "PG": [
-        "Pacific/Port_Moresby",
-        "Pacific/Bougainville"
+        "Pacific/Bougainville",
+        "Pacific/Port_Moresby"
     ],
     "PH": [
         "Asia/Manila"
@@ -744,9 +744,9 @@
         "Asia/Hebron"
     ],
     "PT": [
-        "Europe/Lisbon",
-        "Atlantic/Madeira",
         "Atlantic/Azores",
+        "Atlantic/Madeira",
+        "Europe/Lisbon",
         "Portugal"
     ],
     "PW": [
@@ -768,37 +768,37 @@
         "Europe/Belgrade"
     ],
     "RU": [
-        "Europe/Kaliningrad",
-        "Europe/Moscow",
-        "Europe/Kirov",
-        "Europe/Astrakhan",
-        "Europe/Volgograd",
-        "Europe/Saratov",
-        "Europe/Ulyanovsk",
-        "Europe/Samara",
-        "Asia/Yekaterinburg",
-        "Asia/Omsk",
-        "Asia/Novosibirsk",
+        "Asia/Anadyr",
         "Asia/Barnaul",
-        "Asia/Tomsk",
-        "Asia/Novokuznetsk",
-        "Asia/Krasnoyarsk",
-        "Asia/Irkutsk",
         "Asia/Chita",
-        "Asia/Yakutsk",
+        "Asia/Irkutsk",
+        "Asia/Kamchatka",
         "Asia/Khandyga",
-        "Asia/Vladivostok",
-        "Asia/Ust-Nera",
+        "Asia/Krasnoyarsk",
         "Asia/Magadan",
+        "Asia/Novokuznetsk",
+        "Asia/Novosibirsk",
+        "Asia/Omsk",
         "Asia/Sakhalin",
         "Asia/Srednekolymsk",
-        "Asia/Kamchatka",
-        "Asia/Anadyr",
+        "Asia/Tomsk",
+        "Asia/Ust-Nera",
+        "Asia/Vladivostok",
+        "Asia/Yakutsk",
+        "Asia/Yekaterinburg",
+        "Europe/Astrakhan",
+        "Europe/Kaliningrad",
+        "Europe/Kirov",
+        "Europe/Moscow",
+        "Europe/Samara",
+        "Europe/Saratov",
+        "Europe/Ulyanovsk",
+        "Europe/Volgograd",
         "W-SU"
     ],
     "UA": [
-        "Europe/Simferopol",
         "Europe/Kiev",
+        "Europe/Simferopol",
         "Europe/Uzhgorod",
         "Europe/Zaporozhye"
     ],
@@ -929,42 +929,42 @@
         "Pacific/Wake"
     ],
     "US": [
-        "America/New_York",
+        "America/Adak",
+        "America/Anchorage",
+        "America/Atka",
+        "America/Boise",
+        "America/Chicago",
+        "America/Denver",
         "America/Detroit",
-        "America/Kentucky/Louisville",
-        "America/Kentucky/Monticello",
+        "America/Fort_Wayne",
         "America/Indiana/Indianapolis",
-        "America/Indiana/Vincennes",
-        "America/Indiana/Winamac",
+        "America/Indiana/Knox",
         "America/Indiana/Marengo",
         "America/Indiana/Petersburg",
-        "America/Indiana/Vevay",
-        "America/Chicago",
         "America/Indiana/Tell_City",
-        "America/Indiana/Knox",
+        "America/Indiana/Vevay",
+        "America/Indiana/Vincennes",
+        "America/Indiana/Winamac",
+        "America/Indianapolis",
+        "America/Juneau",
+        "America/Kentucky/Louisville",
+        "America/Kentucky/Monticello",
+        "America/Knox_IN",
+        "America/Los_Angeles",
+        "America/Louisville",
         "America/Menominee",
+        "America/Metlakatla",
+        "America/New_York",
+        "America/Nome",
+        "America/North_Dakota/Beulah",
         "America/North_Dakota/Center",
         "America/North_Dakota/New_Salem",
-        "America/North_Dakota/Beulah",
-        "America/Denver",
-        "America/Boise",
         "America/Phoenix",
-        "America/Los_Angeles",
-        "America/Anchorage",
-        "America/Juneau",
-        "America/Sitka",
-        "America/Metlakatla",
-        "America/Yakutat",
-        "America/Nome",
-        "America/Adak",
-        "Pacific/Honolulu",
-        "America/Atka",
-        "America/Fort_Wayne",
-        "America/Indianapolis",
-        "America/Knox_IN",
-        "America/Louisville",
         "America/Shiprock",
+        "America/Sitka",
+        "America/Yakutat",
         "Navajo",
+        "Pacific/Honolulu",
         "Pacific/Johnston",
         "US/Alaska",
         "US/Aleutian",
