Update to tz 2020a

--- a/js/data/locale/zoneinfo/zonetab.json
+++ b/js/data/locale/zoneinfo/zonetab.json
@@ -387,6 +387,7 @@
     "GL": [
         "America/Danmarkshavn",
         "America/Godthab",
+        "America/Nuuk",
         "America/Scoresbysund",
         "America/Thule"
     ],
