--- a/js/data/locale/zoneinfo/Canada/Yukon.json
+++ b/js/data/locale/zoneinfo/Canada/Yukon.json
@@ -1,18 +1,5 @@
 {
-    "e": {
-        "c": "S",
-        "m": 11,
-        "r": "0>1",
-        "t": "2:0"
-    },
-    "f": "P{c}T",
-    "o": "-8:0",
-    "s": {
-        "c": "D",
-        "m": 3,
-        "r": "0>8",
-        "t": "2:0",
-        "v": "1:0"
-    },
+    "f": "MST",
+    "o": "-7:0",
     "c": "CA"
 }
