--- a/js/data/locale/hy/unitfmt.json
+++ b/js/data/locale/hy/unitfmt.json
@@ -190,8 +190,7 @@
             "kilobyte-per-hour": "#{n} կիլոբայթ ժամում",
             "megabyte-per-hour": "#{n} մեգաբայթ ժամում",
             "gigabyte-per-hour": "#{n} գիգաբայթ ժամում",
-            "terabyte-per-hour": "#{n} տերաբայթ ժամում",
-            "megameter": "#{n} մեգաչափեր"
+            "terabyte-per-hour": "#{n} տերաբայթ ժամում"
         },
         "short": {
             "times": "",
