--- a/js/data/locale/ky/dateformats.json
+++ b/js/data/locale/ky/dateformats.json
@@ -3,40 +3,40 @@
         "order": "{date} {time}",
         "date": {
             "dmwy": {
-                "f": "‏yyyy-'ж'., d-MMMM, EEEE",
-                "l": "‏yyyy-'ж'., d-MMMM, EEE",
-                "m": "‏yyyy-'ж'., d-MMM, EE",
-                "s": "‏d/M/yy, E"
+                "f": "yyyy-'ж'., d-MMMM, EEEE",
+                "l": "yyyy-'ж'., d-MMMM, EEE",
+                "m": "yyyy-'ж'., d-MMM, EE",
+                "s": "d/M/yy, E"
             },
             "dmy": {
-                "f": "‏yyyy-'ж'., d-MMMM",
-                "l": "‏yyyy-'ж'., d-MMMM",
-                "m": "‏yyyy-'ж'., d-MMM",
-                "s": "‏d/M/yy"
+                "f": "yyyy-'ж'., d-MMMM",
+                "l": "yyyy-'ж'., d-MMMM",
+                "m": "yyyy-'ж'., d-MMM",
+                "s": "d/M/yy"
             },
             "dmw": {
-                "f": "‏d-MMMM, EEEE",
-                "l": "‏d-MMMM, EEE",
-                "m": "‏d-MMM, EE",
-                "s": "‏d/M, E"
+                "f": "d-MMMM, EEEE",
+                "l": "d-MMMM, EEE",
+                "m": "d-MMM, EE",
+                "s": "d/M, E"
             },
             "dm": {
-                "f": "‏d-MMMM",
-                "l": "‏d-MMMM",
-                "m": "‏d-MMM",
-                "s": "‏d/M"
+                "f": "d-MMMM",
+                "l": "d-MMMM",
+                "m": "d-MMM",
+                "s": "d/M"
             },
             "my": {
-                "f": "‏yyyy-'ж'., LLLL",
-                "l": "‏yyyy-'ж'., LLLL",
-                "m": "‏yyyy-'ж'., LLL",
-                "s": "‏M/yy"
+                "f": "yyyy-'ж'., LLLL",
+                "l": "yyyy-'ж'., LLLL",
+                "m": "yyyy-'ж'., LLL",
+                "s": "M/yy"
             },
             "dw": {
-                "f": "‏d-EEEE",
-                "l": "‏d-EEE",
-                "m": "‏d-EE",
-                "s": "‏d/E"
+                "f": "d-EEEE",
+                "l": "d-EEE",
+                "m": "d-EE",
+                "s": "d/E"
             },
             "w": {
                 "f": "EEEE",
@@ -80,87 +80,87 @@
                 "h": "h",
                 "m": "mm",
                 "s": "ss",
-                "ah": "‏h a",
-                "hm": "‏h:mm",
+                "ah": "h a",
+                "hm": "h:mm",
                 "ms": "mm:ss",
-                "ahm": "‏h:mm a",
-                "hms": "‏h:mm:ss",
-                "hmz": "‏h:mm z",
-                "ahmz": "‏h:mm a z",
-                "ahms": "‏h:mm:ss a",
-                "hmsz": "‏h:mm:ss z",
-                "ahmsz": "‏h:mm:ss a z"
+                "ahm": "h:mm a",
+                "hms": "h:mm:ss",
+                "hmz": "h:mm z",
+                "ahmz": "h:mm a z",
+                "ahms": "h:mm:ss a",
+                "hmsz": "h:mm:ss z",
+                "ahmsz": "h:mm:ss a z"
             },
             "24": {
                 "h": "HH",
                 "m": "mm",
                 "s": "ss",
-                "ah": "‏HH",
-                "hm": "‏HH:mm",
+                "ah": "HH",
+                "hm": "HH:mm",
                 "ms": "mm:ss",
-                "ahm": "‏HH:mm",
-                "hms": "‏HH:mm:ss",
-                "hmz": "‏HH:mm z",
-                "ahmz": "‏HH:mm z",
-                "ahms": "‏HH:mm:ss",
-                "hmsz": "‏HH:mm:ss z",
-                "ahmsz": "‏HH:mm:ss z"
+                "ahm": "HH:mm",
+                "hms": "HH:mm:ss",
+                "hmz": "HH:mm z",
+                "ahmz": "HH:mm z",
+                "ahms": "HH:mm:ss",
+                "hmsz": "HH:mm:ss z",
+                "ahmsz": "HH:mm:ss z"
             }
         },
         "range": {
             "c00": {
-                "f": "‏{sy}-ж., {sd}-{sm} {st} – {et}",
-                "l": "‏{sy}-ж., {sd}-{sm} {st} – {et}",
-                "m": "‏{sy}-ж., {sd}-{sm} {st} – {et}",
-                "s": "‏{sd}/{sm}/{sy} {st} – {et}"
+                "f": "{sy}-ж., {sd}-{sm} {st} – {et}",
+                "l": "{sy}-ж., {sd}-{sm} {st} – {et}",
+                "m": "{sy}-ж., {sd}-{sm} {st} – {et}",
+                "s": "{sd}/{sm}/{sy} {st} – {et}"
             },
             "c01": {
-                "f": "‏{sy}-ж., {sd}-{sm} {st} – ‏{ey}-ж., {ed}-{em} {et}",
-                "l": "‏{sy}-ж., {sd}-{sm} {st} – ‏{ey}-ж., {ed}-{em} {et}",
-                "m": "‏{sy}-ж., {sd}-{sm} {st} – ‏{ey}-ж., {ed}-{em} {et}",
-                "s": "‏{sd}/{sm}/{sy} {st} – ‏{ed}/{em}/{ey} {et}"
+                "f": "{sy}-ж., {sd}-{sm} {st} – {ey}-ж., {ed}-{em} {et}",
+                "l": "{sy}-ж., {sd}-{sm} {st} – {ey}-ж., {ed}-{em} {et}",
+                "m": "{sy}-ж., {sd}-{sm} {st} – {ey}-ж., {ed}-{em} {et}",
+                "s": "{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}"
             },
             "c02": {
-                "f": "‏{sy}-ж., {sd}-{sm} {st} – ‏{ey}-ж., {ed}-{em} {et}",
-                "l": "‏{sy}-ж., {sd}-{sm} {st} – ‏{ey}-ж., {ed}-{em} {et}",
-                "m": "‏{sy}-ж., {sd}-{sm} {st} – ‏{ey}-ж., {ed}-{em} {et}",
-                "s": "‏{sd}/{sm}/{sy} {st} – ‏{ed}/{em}/{ey} {et}"
+                "f": "{sy}-ж., {sd}-{sm} {st} – {ey}-ж., {ed}-{em} {et}",
+                "l": "{sy}-ж., {sd}-{sm} {st} – {ey}-ж., {ed}-{em} {et}",
+                "m": "{sy}-ж., {sd}-{sm} {st} – {ey}-ж., {ed}-{em} {et}",
+                "s": "{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}"
             },
             "c03": {
-                "f": "‏{sy}-ж., {sd}-{sm} {st} – ‏{ey}-ж., {ed}-{em} {et}",
-                "l": "‏{sy}-ж., {sd}-{sm} {st} – ‏{ey}-ж., {ed}-{em} {et}",
-                "m": "‏{sy}-ж., {sd}-{sm} {st} – ‏{ey}-ж., {ed}-{em} {et}",
-                "s": "‏{sd}/{sm}/{sy} {st} – ‏{ed}/{em}/{ey} {et}"
+                "f": "{sy}-ж., {sd}-{sm} {st} – {ey}-ж., {ed}-{em} {et}",
+                "l": "{sy}-ж., {sd}-{sm} {st} – {ey}-ж., {ed}-{em} {et}",
+                "m": "{sy}-ж., {sd}-{sm} {st} – {ey}-ж., {ed}-{em} {et}",
+                "s": "{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}"
             },
             "c10": {
-                "f": "‏{sy}-ж., {sd}-{sm} – ‏{ed}-{em}",
-                "l": "‏{sy}-ж., {sd}-{sm} – ‏{ed}-{em}",
-                "m": "‏{sy}-ж., {sd}-{sm} – ‏{ed}-{em}",
-                "s": "‏{sd} – ‏{ed}/{em}/{ey}"
+                "f": "{sy}-ж., {sd}-{sm} – {ed}-{em}",
+                "l": "{sy}-ж., {sd}-{sm} – {ed}-{em}",
+                "m": "{sy}-ж., {sd}-{sm} – {ed}-{em}",
+                "s": "{sd} – {ed}/{em}/{ey}"
             },
             "c11": {
-                "f": "‏{sy}-ж., {sd}-{sm} – ‏{ey}-ж., {ed}-{em}",
-                "l": "‏{sy}-ж., {sd}-{sm} – ‏{ey}-ж., {ed}-{em}",
-                "m": "‏{sy}-ж., {sd}-{sm} – ‏{ey}-ж., {ed}-{em}",
-                "s": "‏{sd}/{sm} – ‏{ed}/{em}/{ey}"
+                "f": "{sy}-ж., {sd}-{sm} – {ey}-ж., {ed}-{em}",
+                "l": "{sy}-ж., {sd}-{sm} – {ey}-ж., {ed}-{em}",
+                "m": "{sy}-ж., {sd}-{sm} – {ey}-ж., {ed}-{em}",
+                "s": "{sd}/{sm} – {ed}/{em}/{ey}"
             },
             "c12": {
-                "f": "‏{sy}-ж., {sd}-{sm} – ‏{ey}-ж., {ed}-{em}",
-                "l": "‏{sy}-ж., {sd}-{sm} – ‏{ey}-ж., {ed}-{em}",
-                "m": "‏{sy}-ж., {sd}-{sm} – ‏{ey}-ж., {ed}-{em}",
-                "s": "‏{sd}/{sm}/{sy} – ‏{ed}/{em}/{ey}"
+                "f": "{sy}-ж., {sd}-{sm} – {ey}-ж., {ed}-{em}",
+                "l": "{sy}-ж., {sd}-{sm} – {ey}-ж., {ed}-{em}",
+                "m": "{sy}-ж., {sd}-{sm} – {ey}-ж., {ed}-{em}",
+                "s": "{sd}/{sm}/{sy} – {ed}/{em}/{ey}"
             },
             "c20": {
-                "f": "‏{sy}-ж., {sm} – ‏{ey}-ж., {em}",
-                "l": "‏{sy}-ж., {sm} – ‏{ey}-ж., {em}",
-                "m": "‏{sy}-ж., {sm} – ‏{ey}-ж., {em}",
-                "s": "‏{sm}/{sy} – ‏{em}/{ey}"
+                "f": "{sy}-ж., {sm} – {ey}-ж., {em}",
+                "l": "{sy}-ж., {sm} – {ey}-ж., {em}",
+                "m": "{sy}-ж., {sm} – {ey}-ж., {em}",
+                "s": "{sm}/{sy} – {em}/{ey}"
             },
             "c30": {
-                "f": "‏{sy} – {ey}",
-                "l": "‏{sy} – {ey}",
-                "m": "‏{sy} – {ey}",
-                "s": "‏{sy} – {ey}"
+                "f": "{sy} – {ey}",
+                "l": "{sy} – {ey}",
+                "m": "{sy} – {ey}",
+                "s": "{sy} – {ey}"
             }
         }
     }
